2004/06/14 19:32 (+0200) kaffeetisch

	* xs/GtkFileFilter.xs: Fix erroneous initialization.

2004/06/13 11:36 (-0400) muppetman

	* xs/GdkKeys.xs: adapt docs for get_entries_for_keyval() from the C
	api reference.

2004/06/04 13:52 (-0400) rwmcfa1

	* Gtk2.pm: added a -threads-init option to import, added doc on -init
	and -threads-init. 

	* TODO: removed an outdated todo (example programs, they already can be)
	and removed the above addressed TODO.

2004/06/08 21:39 (-0400) muppetman

	* TODO: updated.

2004/06/04 13:52 (-0400) muppetman

	* AUTHORS, xs/GdkEvent.xs, xs/GdkWindow.xs, xs/Gtk2.xs,
	xs/GtkAccelMap.xs, xs/GtkCellLayout.xs, xs/GtkCellRenderer.xs,
	xs/GtkClipboard.xs, xs/GtkContainer.xs, xs/GtkEntryCompletion.xs,
	xs/GtkFileFilter.xs, xs/GtkItemFactory.xs, xs/GtkMenu.xs,
	xs/GtkTextTagTable.xs, xs/GtkTreeModel.xs, xs/GtkTreeModelFilter.xs,
	xs/GtkTreeSelection.xs, xs/GtkTreeSortable.xs, xs/GtkTreeView.xs,
	xs/GtkTreeViewColumn.xs, xs/PangoFontset.xs: patch from Albert Chin
	removes non-static initializers so that we are compatible with
	C89 (which doesn't allow them).  the patch converted C++ comments to
	C, but most were on dead code, so i removed them instead.

2004/06/02 20:10 (-0400) muppetman

	Unstable release 1.050

	* NEWS: updated.

2004/06/01 22:00 (-0400) muppetman

	* gtk-demo/appwindow.pl, gtk-demo/images.pl, gtk-demo/main.pl,
	gtk-demo/pixbufs.pl, gtk-demo/textview.pl: remove dead code

2004/05/31 23:13 (+0200) kaffeetisch

	* examples/simple_menu.t: Add a delete_event handler.

	* t/GdkVisual.t: Skip the get_best_with_depth test on 2.2.x.

2004/05/28 22:36 pcg

	* xs/GdkColor.xs: scaling by 257 is better than scaling by 8.

2004/05/21 02:28 (+0200) pcg

        * xs/GtkTextBuffer.xs: Allow creation of anonymous marks.

2004/05/15 20:58 (+0200) kaffeetisch

	* t/GdkEvent.t: Be a bit more tolerant to pass on older gtk+'s.

	* t/GdkProperty.t: Fix skip count.

	* t/GtkFontSelection.t: Convert font name to lowercase before
	testing.
